Membuat Permulaan untuk  Navbar, Headquarters, dll

--- a/index.html
+++ b/index.html
@@ -5,10 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JP-Mini Course</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
   </head>
-
   <body>
-    <h1>Hello Gaiss...</h1>
-    <script src="./js/script.js"></script>
+    <header class="header">
+      <div class="nav-logo">
+        <img src="./assets/revou-logo.png" alt="revou-logo" />
+      </div>
+      <nav class="nav">
+        <div class="nav-item">Home</div>
+        <div class="nav-item">Our Profile</div>
+        <div class="nav-item">Portofolio</div>
+        <div class="nav-item">Contact Us</div>
+      </nav>
+    </header>
+    <section class="banner">
+      <div class="greetings">
+        <h1>Hi, My name is Julian Pramana</h1>
+        <p>Ini adalah latihan website pertama</p>
+      </div>
+    </section>
+
+    <section class="headquarters">
+      <h1>Our Headquarters</h1>
+      <div class="hq-items">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+    </section>
+
+    <section class="form">
+      <div class="form-left">
+        <form>
+          <table>
+            <td>
+              <label for="nama">Nama</label>
+            </td>
+            <td>:</td>
+            <td>
+              <input type="nama" name="nama" id="nama" />
+            </td>
+          </table>
+        </form>
+      </div>
+    </section>
+
+    <section>
+      <footer class="footer">
+        <center>
+          <p class="footer-text">made by Julian Pramana</p>
+        </center>
+      </footer>
+    </section>
   </body>
+  <script src="./js/script.js"></script>
 </html>
