--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" type="image/x-icon" href="./assets/image/favicon.png" />
   </head>
-  <body>
+  <body class="html">
     <!-- Halaman Section untuk Header dan Menu Navigasi -->
     <header class="header" id="beranda">
       <div class="nav-logo">
@@ -33,6 +33,7 @@
     <section class="headquarters" id="profile">
       <center><h1>Our Headquarters</h1></center>
       <div class="hq-items">
+        <!-- <figure class="circle"> -->
         <img
           class="circle"
           src="./assets/gambar/Bangku-Rancah_2.jpeg"
@@ -49,6 +50,7 @@
           alt="Galunggung Mountain @ Tasikmalaya"
         />
       </div>
+
       <div class="hq-items">
         <div>Ciamis</div>
         <div>Garut</div>
@@ -60,95 +62,69 @@
     <section class="form" id="contact-us">
       <div class="form-left">
         <h1>Contact Us</h1>
-        <form>
+        <form name="message-form" onsubmit="return validateForm()">
           <table>
             <tr>
-              <td>
-                <label for="nama">Nama</label>
-              </td>
+              <td>Nama</td>
               <td>:</td>
               <td>
-                <input type="text" name="nama" id="nama" placeholder="Nama" />
+                <input type="text" name="full-name" placeholder="Input Name" />
               </td>
             </tr>
+            <!-- <br /> -->
             <tr>
-              <td>
-                <label for="tgl_lahir">Tanggal Lahir</label>
-              </td>
+              <td>Tanggal Lahir</td>
               <td>:</td>
               <td>
-                <input type="date" name="tgl_lahir" id="tgl_lahir" />
+                <input type="date" name="birth-date" />
               </td>
             </tr>
+            <!-- <br /> -->
             <tr>
-              <td>
-                <label for="jns_kel">Jenis Kelamin</label>
-              </td>
+              <td>Jenis Kelamin</td>
               <td>:</td>
               <td>
-                <input
-                  type="radio"
-                  name="jns_kel"
-                  id="pria"
-                  value="Laki-laki"
-                />
-                <label for="pria">Laki-laki</label>
-                <input
-                  type="radio"
-                  name="jns_kel"
-                  id="wanita"
-                  value="Perempuan"
-                />
-                <label for="wanita">Perempuan</label>
+                <input type="radio" name="gender" id="L" value="Laki-laki" />
+                <label for="L">Laki-laki</label>
+                <input type="radio" name="gender" id="P" value="Perempuan" />
+                <label for="P">Perempuan</label>
               </td>
             </tr>
+            <!-- <br /> -->
             <tr>
-              <td>
-                <label for="pesan">Pesan</label>
-              </td>
+              <td>Pesan</td>
               <td>:</td>
               <td>
                 <textarea
-                  name="pesan"
-                  id="pesan"
-                  placeholder="Pesan"
+                  name="messages"
+                  placeholder="Input Messages Here ...."
+                  cols="40"
                   rows="4"
-                  cols="50"
-                >
-                </textarea>
+                ></textarea>
+                <!-- <br /> -->
               </td>
             </tr>
-            <tr></tr>
+            <tr>
+              <td colspan="2"></td>
+              <td>
+                <input type="submit" value="Submit" />
+              </td>
+            </tr>
           </table>
-          <input type="submit" value="sumbit" />
         </form>
       </div>
-    </section>
 
-    <!-- Halaman Section untuk Contact Us
-    <section class="form" id="contact-us">
-      <div class="form-left">
-        <div id="cf-form">
-          <h1 class="cf-h1">Contact Us</h1>
-          <form class="cf-form-class" id="cf-form-id">
-            <div class="cf-form-grup">
-              <label for="nama">Nama :</label>
-              <input
-                type="text"
-                name="nama"
-                id="nama"
-                placeholder="Nama"
-                required
-              />
-            </div>
-            <div class="cf-form-grup">
-              <label for="tgl_lahir">Tanggal Lahir :</label>
-              <input type="date" name="tgl_lahir" id="tgl_lahir" />
-            </div>
-          </form>
+      <div class="form-right">
+        <h1>&nbsp;</h1>
+        <!-- <br /> -->
+        <div id="right-box">
+          <p>&nbsp; Nama : <span id="sender-full-nama"></span></p>
+          <p>&nbsp; Tanggal Lahir : <span id="sender-birth-date"></span></p>
+          <p>&nbsp; Jenis Kelamin : <span id="sender-gender"></span></p>
+          <p>&nbsp; Pesan : <span id="sender-messages"></span></p>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Section Footer -->
     <section>
